[Fix] SearchBar z-index 수정

--- a/src/components/common/searchBar.module.css
+++ b/src/components/common/searchBar.module.css
@@ -5,7 +5,7 @@
   justify-content: start;
   align-items: center;
   pointer-events: auto;
-  z-index: 1002;
+  /* z-index: 1002; */
 }
 
 .content {
